add + update project config files and .env.sample

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,5 +3,20 @@
   "extends": ["@mgcrea/node"],
   "rules": {
     "testing-library/no-debugging-utils": 0
-  }
+  },
+  "overrides": [
+    {
+      "files": ["*.ts"],
+      "rules": {
+        "@typescript-eslint/no-unused-vars": [
+          "error",
+          {
+            "argsIgnorePattern": "^_",
+            "varsIgnorePattern": "^_",
+            "caughtErrorsIgnorePattern": "^_"
+          }
+        ]
+      }
+    }
+  ]
 }
