--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "prettier": "^3.0.3",
     "prettier-plugin-organize-imports": "^3.2.3",
     "prisma": "^5.2.0",
+    "release-it": "^16.1.5",
     "slonik-interceptor-field-name-transformation": "^1.6.5",
     "slonik-sql-tag-raw": "^2.0.0",
     "tsup": "^7.2.0",
